# bio-toolkit

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  fix_newlines.py  pyproject.toml
.github/workflows/: ci.yml
bio_toolkit/: __init__.py  alignment.py  analysis.py  cli.py  fastq.py  io.py  utils.py  vcf.py
tests/: test_basic.py  test_cli_smoke.py
tests/data/: example.fa  example.fq  example.vcf
